syntax = "proto3";

package example.complex;

option go_package = "github.com/danielMensah/proto-practice/proto";

message DummyMessage {
  int32 id = 1;
  string name = 2;
}

message Complex {
  DummyMessage dummy = 1;
  repeated DummyMessage dummies = 2;
}
